--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,20 +1,22 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+name: Maven CI/CD
 
-name: Java CI with Maven
-
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
-  build:
+  build_and_test:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Build with Maven
-      run: mvn clean install
+        java-version: 14
+
+    - name: Build project with Maven
+      run: mvn -B package --file my-app/pom.xml
