--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,9 +7,34 @@ on:
     branches: [ master ]
 
 jobs:
-  build_and_test:
-
+  build_on_ubuntu:
     runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+
+    - name: Build project with Maven
+      run: mvn -B package --file my-app/pom.xml
+      
+  build_on_windows:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+
+    - name: Build project with Maven
+      run: mvn -B package --file my-app/pom.xml
+
+  build_on_macOS:
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
