--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,29 +23,30 @@ jobs:
       run: mvn --file my-app/pom.xml clean install
     - name: Running mvn test 
       run: mvn --file my-app/pom.xml test
-      
-  build_on_windows:
-    runs-on: windows-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+# # TODO: Uncomment it later to verify new changes.
+#   build_on_windows:
+#     runs-on: windows-latest
 
-    - name: Build project with Maven
-      run: mvn -B package --file my-app/pom.xml
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
 
-  build_on_macOS:
-    runs-on: macos-latest
+#     - name: Build project with Maven
+#       run: mvn -B package --file my-app/pom.xml
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+#   build_on_macOS:
+#     runs-on: macos-latest
 
-    - name: Build project with Maven
-      run: mvn -B package --file my-app/pom.xml
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
+
+#     - name: Build project with Maven
+#       run: mvn -B package --file my-app/pom.xml
