--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -2,9 +2,9 @@ name: Maven CI/CD
 
 on:
   push:
-    branches: [ master ]
+    branches: [ test-github-actions ]
   pull_request:
-    branches: [ master ]
+    branches: [ test-github-actions ]
 
 jobs:
   build_on_ubuntu:
