--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -35,12 +35,10 @@ jobs:
       with:
         name: Project Artifact ZIP
         path: artifacts
-    - name: Create GitHub release
-      uses: Roang-zero1/github-create-release-action@master
+    - name: Tag/Release on Push Action
+      uses: rymndhng/release-on-push-action@v0.15.0
       with:
-        version_regex: ^v[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        bump_version_scheme: minor
 
 # # TODO: Uncomment it later to verify new changes.
 #   build_on_windows:
