--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -9,14 +9,18 @@ on:
 
 jobs:
   build_on_ubuntu:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest, windows-latest, macos-latest]
+        java-version: ['8', '9', '11', '13']
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK ${{ matrix.java-version }}
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.java-version }}
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
@@ -36,12 +40,12 @@ jobs:
       with:
         name: Project Artifact ZIP
         path: artifacts
-    - name: Tag/Release on Push Action
-      uses: rymndhng/release-on-push-action@v0.15.0
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        bump_version_scheme: minor
+#     - name: Tag/Release on Push Action
+#       uses: rymndhng/release-on-push-action@v0.15.0
+#       env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       with:
+#         bump_version_scheme: minor
 
 # # TODO: Uncomment it later to verify new changes.
 #   build_on_windows:
