--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        java-version: ['8', '9', '11', '13']
+        java-version: ['8']
 
     steps:
     - uses: actions/checkout@v2
