--- a/.github/workflows/test-github-actions.yml
+++ b/.github/workflows/test-github-actions.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
-        java-version: ['8', '13']
+        java-version: ['8']
 
     steps:
     - uses: actions/checkout@v2
@@ -33,28 +33,28 @@ jobs:
       run: mvn --file my-app/pom.xml test
     - name: Build Package
       run: mvn -B package --file my-app/pom.xml
-    - name: Create Directory and copy JAR
-      run: mkdir artifacts && cp my-app/target/*.jar artifacts
-    - name: Upload JAR
-      uses: actions/upload-artifact@v2
-      with:
-        name: Project Artifact ZIP
-        path: artifacts
+#     - name: Create Directory and copy JAR
+#       run: mkdir artifacts && cp my-app/target/*.jar artifacts
+#     - name: Upload JAR
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: Project Artifact ZIP
+#         path: artifacts
 #     - name: Tag/Release on Push Action
 #       uses: rymndhng/release-on-push-action@v0.15.0
 #       env:
 #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #       with:
 #         bump_version_scheme: minor
-    - name: badge-it
-      # You may pin to the exact commit or the version.
-      # uses: RocktimSaikia/badge-it@61d66a36b6af098c1b41103a23be0a5c62c1bb84
-      uses: RocktimSaikia/badge-it@2.0.0
-      with:
-        # github personal token
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # A string array of names of the badges to add
-        badges: 'Build Successful'
+#     - name: badge-it
+#       # You may pin to the exact commit or the version.
+#       # uses: RocktimSaikia/badge-it@61d66a36b6af098c1b41103a23be0a5c62c1bb84
+#       uses: RocktimSaikia/badge-it@2.0.0
+#       with:
+#         # github personal token
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         # A string array of names of the badges to add
+#         badges: 'Build Successful'
 
 # # TODO: Uncomment it later to verify new changes.
 #   build_on_windows:
